--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,7 @@
 server.status.400=Invalid Request!
 server.status.500=Internal server error!
 
-user.error.notFound=User was not found!
+user.all.error.notFound=Users list returned empty!
+user.all.success=Users found successfully!
+user.single.error.notFound=User was not found!
+user.single.success=User found successfully!
