--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,3 +2,5 @@ server.status.400=Invalid Request!
 server.status.500=Internal server error!
 
 user.error.notFound=User was not found!
+user.success.update=User updated successfully!
+user.success.delete=User deleted successfully!
