Added posts messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,3 +4,7 @@ server.status.500=Internal server error!
 user.error.notFound=User was not found!
 user.success.update=User updated successfully!
 user.success.delete=User deleted successfully!
+
+post.error.notFound=Post was not found!
+post.success.update=Post updated successfully!
+post.success.delete=Post deleted successfully!
