--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,3 +8,5 @@ user.success.delete=User deleted successfully!
 post.error.notFound=Post was not found!
 post.success.update=Post updated successfully!
 post.success.delete=Post deleted successfully!
+
+comment.success.add=Commented added successfully!
